# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
#

2004-10-23 16:06:52 GMT	John Goerzen <jgoerzen@complete.org>	patch-105

    Summary:
      Playing around with basics
    Revision:
      missingh--head--1.0--patch-105


    removed files:
     debian/libghc6-missingh-dev.postinst.debhelper
     debian/libghc6-missingh-dev.prerm.debhelper

    modified files:
     ChangeLog libsrc/MissingH/IO.hs
     libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs


2004-10-23 15:32:16 GMT	John Goerzen <jgoerzen@complete.org>	patch-104

    Summary:
      Added debugging support to FTP parser
    Revision:
      missingh--head--1.0--patch-104


    new files:
     debian/libghc6-missingh-dev.postinst.debhelper
     debian/libghc6-missingh-dev.prerm.debhelper

    modified files:
     ChangeLog libsrc/MissingH/Logging/Logger.hs
     libsrc/MissingH/Network/FTP/Parser.hs


2004-10-22 22:00:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-103

    Summary:
      Added split/splitRE stuff
    Revision:
      missingh--head--1.0--patch-103

    Rewrote split to be simpler.  Added takeWhileList, breakList, etc.

    modified files:
     ChangeLog libsrc/MissingH/List.hs
     libsrc/MissingH/Network/FTP/Parser.hs libsrc/MissingH/Str.hs
     notes.txt


2004-10-22 20:53:53 GMT	John Goerzen <jgoerzen@complete.org>	patch-102

    Summary:
      Added tests for FTP host stuff
    Revision:
      missingh--head--1.0--patch-102


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Parser.hs
     testsrc/Network/FTP/Parsertest.hs


2004-10-22 20:29:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-101

    Summary:
      Added Bits
    Revision:
      missingh--head--1.0--patch-101


    new files:
     libsrc/MissingH/Bits.hs testsrc/Bitstest.hs

    modified files:
     ChangeLog Setup.description testsrc/Tests.hs

