@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
 #
 
+2004-10-23 16:57:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-106
+
+    Summary:
+      Checkpointing for fix
+    Revision:
+      missingh--head--1.0--patch-106
+
+
+    modified files:
+     ChangeLog Makefile libsrc/MissingH/Network/FTP/Client.hs
+
+
 2004-10-23 16:06:52 GMT	John Goerzen <jgoerzen@complete.org>	patch-105
 
     Summary:
